--- a/letter.html
+++ b/letter.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MY LOVE</title>
+    <title>BUBBBY</title>
     <link
       href="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.css"
       rel="stylesheet"
@@ -29,7 +29,7 @@
       <div
         class="inset-0 w-[100%] no-repeat fixed"
         style="
-          background-image: url(heheh.jpg);
+          background-image: url(kamaay.jpg);
           background-repeat: no-repeat;
           background-size: cover;
           background-attachment: fixed;
@@ -41,24 +41,19 @@
         <div
           class="text-center text-black p-4 font-serif text-red-600 text-center my-8 tracking-wide italic"
         >
-          <h1 class="text-3xl font-bold">Baby ko💋😘</h1>
+          <h1 class="text-3xl font-bold">Bubby ko💋😘</h1>
           <br />
 
-          <div class="text-justify mx-3 md:px-4">
+          <div class="text-justify mx-6 md:px-6">
             <i
-              >Hi baby mahal na mahal kita hmmmmmmmm💋😘 HAPPY
-              VALENTINES!!💋😘💋😘 HEHEEHEE alam mo naman na mahal na mahal kita
-              kaya una palang minahal na kita kasi napaka kulit mo at lambing
-              ehhehehehe💋😘 basta isa pa sarap mo lagi asarin 💋😘 IHIHIH
-              suurryyyy mmwaaa💋😘 wish ko na lagi kang safe💋😘happy 💋😘 at
-              matupad ang mga pangarap mo 💋😘 andito lang ako palagi para mang
-              asar ayyyy esteee supportahan ka sa mga plano mo 💋😘
-              HHIHIHIHIHIH💋😘💋😘 I LOVE UUUUUUUU💋😘💋😘
-              MHWMAWMWMWMAWWMMAWMAMM💋😘💋😘💋😘💋😘💋😘
+              > 
+              Bubby?? happy valenttines 😘💋😘 im so happy na nakilala kita 😘💋😘 una palang alam ko na na maalaga ka 😘💋😘 mabait ka 😘💋😘 at suuper toyo hehehe joke lang 😘💋😘
+              wish ko na matupad mo mga pangarap mo at makapag tapos ka at maakahanap ka ng work mo 😘💋😘 syempre nandito ako para matupad mo lahat yun bubby 😘💋😘 kaya mag iingat ka po lagi at be safe po bubby 😘💋😘 im here lang po always para sayo bubby 😘💋😘
+
             </i>
 
             <br />
-            <i> i love you sooo much baby ko💋😘 </i>
+            <i> My special person Bubby😘💋😘😘 </i>
           </div>
         </div>
 
@@ -66,7 +61,7 @@
         <h3
           class="text-3xl font-serif text-red-600 text-center my-8 tracking-wide italic"
         >
-          Im here for you always baby ❤️
+          Im here for you always Bubby ❤️
         </h3>
         <div
           class="flex flex-col lg:flex-row justify-center items-center lg:w-1/2 p-12"
